--- a/Kodansha/Kodansha.html
+++ b/Kodansha/Kodansha.html
@@ -105,6 +105,59 @@
 <div class="mySlides" style="text-align: center;"><img src="Kodansha85.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kodansha86.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kodansha87.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha88.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha89.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha90.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha91.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha92.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha93.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha94.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha95.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha96.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha97.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha98.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha99.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha100.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha101.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha102.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha103.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha104.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha105.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha106.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha107.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha108.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha109.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha110.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha111.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha112.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha113.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha114.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha115.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha116.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha117.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha118.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha119.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha120.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha121.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha122.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha123.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha124.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha125.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha126.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha127.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha128.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha129.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha130.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha131.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha132.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha133.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha134.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha135.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha136.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha137.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha138.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha139.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kodansha140.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -203,6 +256,101 @@ Titles
 <li><a href="Kodansha85.jpg">Kigurumi Guardians</a> 2017
 <li><a href="Kodansha86.jpg">Kiss Him, Not Me!</a> 2015
 <li><a href="Kodansha87.jpg">Kiss Me at the Stroke of Midnight</a> 2017
+<li><a href="Kodansha88.jpg">Kitchen Princess Omnibus</a> 2012
+<li><a href="Kodansha89.jpg">Kodansha Comics FCBD</a> 2015
+<li><a href="Kodansha90.jpg">Kodansha Comics Halloween Comic Fest Sampler</a> 2019
+<li><a href="Kodansha91.jpg">Land of the Lustrous</a>	2017
+<li><a href="Kodansha92.jpg">LDK</a> 2015
+<li><a href="Kodansha93.jpg">Let’s Dance a Waltz</a> 2015
+<li><a href="Kodansha94.jpg">Livingstone</a> 2015
+<li><a href="Kodansha95.jpg">Love and Lies</a> 2017
+<li><a href="Kodansha96.jpg">Love Hina Omnibus</a> 2011
+<li><a href="Kodansha97.jpg">Love in Focus</a> 2019
+<li><a href="Kodansha98.jpg">Maga-Tsuki</a> 2016
+<li><a href="Kodansha99.jpg">Magus of the Library</a>  	2019
+<li><a href="Kodansha100.jpg">Manga Dogs</a>  	2014
+<li><a href="../MangaManga/MangaManga.html">Manga! Manga! The World of Japanese Comics</a> 1983
+<li><a href="Kodansha101.jpg">Mardock Scramble</a> 2011
+<li><a href="Kodansha102.jpg">Maria the Virgin Witch</a> 2015
+<li><a href="Kodansha103.jpg">Maria the Virgin Witch Exhibition</a> 2015
+<li><a href="Kodansha104.jpg">Miles Edgeworth: Ace Attorney Investigations</a> 2012
+<li><a href="Kodansha105.jpg">Missions of Love</a> 2012
+<li><a href="Kodansha106.jpg">Monster Hunter Orage</a> 2011
+<li><a href="Kodansha107.jpg">Monster Soul</a> 2014
+<li><a href="Kodansha108.jpg">My Little Monster</a> 2014
+<li><a href="Kodansha109.jpg">Negiho: Mahora Little Girls</a> 2013
+<li><a href="Kodansha110.jpg">Negima! Magister Negi Magi</a> 2011
+<li><a href="Kodansha111.jpg">Negima! Magister Negi Magi Omnibus</a> 2011
+<li><a href="Kodansha112.jpg">Negima!? Neo: Magister Negi Magi</a> 2011
+<li><a href="Kodansha113.jpg">Nekogahara: Stray Cat Samurai</a> 2016
+<li><a href="Kodansha114.jpg">Neo Parasite</a> 2016
+<li><a href="Kodansha115.jpg">Ninja Girls</a> 2011
+<li><a href="Kodansha116.jpg">Ninja Slayer Kills</a> 2015
+<li><a href="Kodansha117.jpg">No. 6</a> 2013
+<li><a href="Kodansha118.jpg">Noragami: Stray God</a> 2014
+<li><a href="Kodansha119.jpg">Noragami: Stray Stories</a> 2015
+<li><a href="Kodansha120.jpg">O Maidens in Your Savage Season</a> 2019
+<li><a href="Kodansha121.jpg">Otomo: A Global Tribute to the Mind Behind Akira</a> 2017
+<li><a href="Kodansha122.jpg">Paradise Residence</a> 2016
+<li><a href="Kodansha123.jpg">Parasyte</a> 2011
+<li><a href="Kodansha124.jpg">Persona Q: Shadow of the Labyrinth Side</a> 2016
+<li><a href="Kodansha125.jpg">Phoenix Wright: Ace Attorney</a> 2011
+<li><a href="Kodansha126.jpg">Pretty Guardian Sailor Moon</a> 2011
+<li><a href="Kodansha127.jpg">Pretty Guardian Sailor Moon Eternal Edition</a> 2018
+<li><a href="Kodansha128.jpg">Pretty Guardian Sailor Moon Short Stories</a> 2013
+<li><a href="Kodansha129.jpg">Prince in His Dark Days</a> 2016
+<li><a href="Kodansha130.jpg">Princess Jellyfish</a> 2016
+<li><a href="Kodansha131.jpg">Queen Emeraldas</a> 2016
+<li><a href="Kodansha132.jpg">Quintessential Quintuplets</a> 2019
+<li><a href="Kodansha133.jpg">Rave Master</a> 2011
+<li><a href="Kodansha134.jpg">Real Account</a> 2016
+<li><a href="Kodansha135.jpg">Sankarea: Undying Love</a> 2013
+<li><a href="Kodansha136.jpg">Say I Love You</a> 2014
+<li><a href="Kodansha137.jpg">Sayonara, Zetsubou-Sensei: The Power of Negative Thinking</a> 2011
+<li><a href="Kodansha138.jpg">Seven Deadly Sins  	2014
+<li><a href="Kodansha139.jpg">Seven Deadly Sins: Seven Days  	2018
+<li><a href="Kodansha140.jpg">Sherlock Bones  	2013
+<li><a href="Kodansha.jpg">Shugo Chara Chan!  	2011
+<li><a href="Kodansha.jpg">Shugo Chara!  	2011
+<li><a href="Kodansha.jpg">Sign of Affection  	2021
+<li><a href="Kodansha.jpg">Silent Voice  	2015
+<li><a href="Kodansha.jpg">Something's Wrong with Us  	2020
+<li><a href="Kodansha.jpg">Spoof on Titan  	2016
+<li><a href="Kodansha.jpg">Star Crossed!!  	2021
+<li><a href="Kodansha.jpg">Sue & Tai-chan  	2020
+<li><a href="Kodansha.jpg">Sweat and Soap  	2020
+<li><a href="Kodansha.jpg">Sweetness and Lightning  2016
+<li><a href="Kodansha.jpg">Tales of Berseria  	2019
+<li><a href="Kodansha.jpg">That Time I Got Reincarnated as a Slime  	2017
+<li><a href="Kodansha.jpg">That Time I Got Reincarnated as a Slime: Trinity in Tempest  	2020
+<li><a href="Kodansha.jpg">That Wolf-Boy Is Mine!  	2016
+<li><a href="Kodansha.jpg">Those Not-So-Sweet Boys  	2021
+<li><a href="Kodansha.jpg">To Your Eternity  	2017
+<li><a href="Kodansha.jpg">Tokyo Mew Mew a la Mode Omnibus  	2014
+<li><a href="Kodansha.jpg">Tokyo Mew Mew Omnibus  	2011
+<li><a href="Kodansha.jpg">Tokyo Tarareba Girls  	2018
+<li><a href="Kodansha.jpg">Toppu GP  	2017
+<li><a href="Kodansha.jpg">Tsubasa WoRLD CHRoNiCLE: Niraikanai  	2015
+<li><a href="Kodansha.jpg">Tsubasa: Reservoir Chronicle Omnibus  	2014
+<li><a href="Kodansha.jpg">Until the Full Moon  	2011
+<li><a href="Kodansha.jpg">UQ Holder!  	2014
+<li><a href="Kodansha.jpg">Vinland Saga  	2013
+<li><a href="Kodansha.jpg">Waiting for Spring  2017
+<li><a href="Kodansha.jpg">Wake Up, Sleeping Beauty  2017
+<li><a href="Kodansha.jpg">Wallflower  	2011
+<li><a href="Kodansha.jpg">Wave, Listen to Me! 2020
+<li><a href="Kodansha.jpg">Welcome to the Ballroom 2016
+<li><a href="Kodansha.jpg">Whisper Me a Love Song  2020
+<li><a href="Kodansha.jpg">Witch and the Beast  	2020
+<li><a href="Kodansha.jpg">Witch Hat Atelier  	2019
+<li><a href="Kodansha.jpg">Wotakoi: Love Is Hard for Otaku  2018
+<li><a href="Kodansha.jpg">xxxHolic Omnibus  	2014
+<li><a href="Kodansha.jpg">xxxHolic Rei  	2014
+<li><a href="Kodansha.jpg">Yakuza Moon: The True Story of a Gangster's Daughter (The Manga Edition)  	2011
+<li><a href="Kodansha.jpg">Yamada-kun and the Seven Witches  	2015
+<li><a href="Kodansha.jpg">Your Lie in April  	2015
+<li><a href="Kodansha.jpg">Yuri Is My Job!  	2019
+<li><a href="Kodansha.jpg">Yuzu the Pet Vet  	2020
 
 </p>
 
