--- a/index.html
+++ b/index.html
@@ -13526,6 +13526,13 @@
 </tr>
 
 <tr>
+<td>Berkley Books</td>
+<td>1954</td>
+<td>Publisher</td>
+<td><a href="BerkleyBooks/BerkleyBooks.html">Details</a>
+</tr>
+
+<tr>
 <td>Berlin</td>
 <td>1998</td>
 <td>Drawn And Quarterly</td>
@@ -74229,28 +74236,28 @@
 </tr>
 
 <tr>
-<td>Pengiun Books</td>
+<td>Penguin Books</td>
 <td>1927</td>
 <td>Publisher</td>
 <td><a href="RandomHouse/RandomHouse.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Pengiun Revolution</td>
+<td>Penguin Revolution</td>
 <td>2006</td>
 <td>Wildstorm</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Pengiuns Of Madagascar</td>
+<td>Penguins Of Madagascar</td>
 <td>2010</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
 </tr>
 
 <tr>
-<td>Pengiuns Of Madagascar: Operation Wonder From Down Under</td>
+<td>Penguins Of Madagascar: Operation Wonder From Down Under</td>
 <td>2010</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
