Kirby: King of Comics

--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -77,6 +77,8 @@ At DC, Kirby created his Fourth World saga, which spanned several comics titles.
 </p><p>
 Kirby was married to Rosalind Goldstein in 1942. They had four children, and remained married until his death from heart failure in 1994, at the age of 76. The Jack Kirby Awards and Jack Kirby Hall of Fame were named in his honor, and he is known as "The King" among comics fans for his many influential contributions to the medium.
 </p><p>
+See <a href="../KirbyKingOfComics/KirbyKingOfComics.html">Kirby: King Of Comics</a> a biography of his life for more.
+</p><p>
 I wanted to link all of the covers Kirby has done, but there are so many, it may take years. To get a sense of how much work Kirby has done, I am attempting to list some of the characters he as created, because there are hundreds of issues of dozens of titles he has done covers for. I would like to get this list to link to titles I have, but even that seems to be too much work!
 </p><p>
 <li>Abominable Snowman (comics)
