--- a/KirbyKingOfComics/KirbyKingOfComics.html
+++ b/KirbyKingOfComics/KirbyKingOfComics.html
@@ -19,7 +19,9 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="KirbyKingOfComics1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="KirbyKingOfComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KirbyKingOfComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KirbyKingOfComics4.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -27,7 +29,7 @@
 </p><p>
 240 Pages published by Abrams Books in 2008. Written by Mark Evanier with intro by Neil Gaiman. 
 </p><p>
-Jack Kirby created or co-created some of comic books’ most popular super heroes, including Captain America, The X-Men, The Hulk, The Fantastic Four, The Mighty Thor, Darkseid, and The New Gods. More significantly, he created much of the visual language for fantasy and adventure comics. 
+<a href="../JackKirby/JackKirby.html">Jack Kirby</a> created or co-created some of comic books’ most popular super heroes, including Captain America, The X-Men, The Hulk, The Fantastic Four, The Mighty Thor, Darkseid, and The New Gods. More significantly, he created much of the visual language for fantasy and adventure comics. 
 </p><p>
 There were comics before Kirby, but for the most part their page layout, graphics, and visual dynamic aped what was being done in syndicated newspaper strips. Almost everything that was different about comic books began in the 1940s on the drawing table of Jack Kirby. This is his story by one who knew him well, Mark Evanier. First issued in 2008, Kirby: King of Comics was the first overview of the legendary comic book creator’s career.
 </p>
