--- a/index.html
+++ b/index.html
@@ -77969,6 +77969,13 @@
 </tr>
 
 <tr>
+<td>Quality Periodicals</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="QualityPeriodicals/QualityPeriodicals.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Quality Time: Parents, Progeny, and Pets</td>
 <td>1995</td>
 <td>Random House</td>
@@ -78771,6 +78778,13 @@
 <td>1994</td>
 <td>London Night</td>
 <td><a href="LondonNightStudios/LondonNightStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Raw Junior Comics</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="RawJunior/RawJunior.html">Details</a></td>
 </tr>
 
 <tr>
@@ -95838,6 +95852,13 @@
 <td>1996</td>
 <td>Adhesive</td>
 <td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Toon Books Comics</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="RawJunior/RawJunior.html">Details</a></td>
 </tr>
 
 <tr>
