--- a/index.html
+++ b/index.html
@@ -22040,6 +22040,13 @@
 <td>Dynamite</td>
 <td><a href="Centipede/Centipede.html">Details</a></td>
 </tr>
+ 
+<tr>
+<td>Central Park Media (CPM)</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="CentralParkMedia/CentralParkMedia.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Centurion Of Ancient Rome</td>
@@ -50208,6 +50215,13 @@
 <td>2006</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr> 
+
+<tr>
+<td>Houghton Mifflin Comics</td>
+<td>1832</td>
+<td>Publisher</td>
+<td><a href="HoughtonMifflin/HoughtonMifflin.html">Details</a></td>
 </tr>
 
 <tr>
