--- a/index.html
+++ b/index.html
@@ -13720,6 +13720,13 @@
 </tr>
 
 <tr>
+<td>Best Cartoons From The Editors of Man's</td>
+<td>1975</td>
+<td>Mayfair</td>
+<td><a href="MayfairComics/MayfairComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Best Friends</td>
 <td>2019</td>
 <td>First Second</td>
@@ -43513,6 +43520,13 @@
 </tr>
 
 <tr>
+<td>George Tuska</td>
+<td>1916</td>
+<td>Creator</td>
+<td><a href="GeorgeTuska/GeorgeTuska.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Georges Clairin</td>
 <td>1843</td>
 <td>Creator</td>
@@ -65034,6 +65048,13 @@
 </tr>
 
 <tr>
+<td>Mayfair Comics</td>
+<td>1975</td>
+<td>Publisher</td>
+<td><a href="MayfairComics/MayfairComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mayhem</td>
 <td>1989</td>
 <td>Dark Horse</td>
@@ -67616,6 +67637,13 @@
 </tr>
 
 <tr>
+<td>Monster Magazine</td>
+<td>1975</td>
+<td>Mayfair</td>
+<td><a href="MayfairComics/MayfairComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monster Men: Soul Of The Beast</td>
 <td>2019</td>
 <td>American Mythology</td>
@@ -69734,6 +69762,13 @@
 <td>1940</td>
 <td>Quality</td>
 <td><a href="National/National.html">Details</a></td>
+</tr>
+
+<tr>
+<td>National Crumb</td>
+<td>1975</td>
+<td>Mayfair</td>
+<td><a href="MayfairComics/MayfairComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -95775,6 +95810,13 @@
 <td>1990</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Toby Comics</td>
+<td>1949</td>
+<td>Publisher</td>
+<td><a href="TobyComics/TobyComics.html">Details</a></td>
 </tr>
 
 <tr>
