--- a/SparkleComics/SparkleComics.html
+++ b/SparkleComics/SparkleComics.html
@@ -30,6 +30,15 @@
 <div class="mySlides" style="text-align: center;"><img src="SparkleComics10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SparkleComics11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SparkleComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SparkleComics21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -38,6 +47,27 @@
 <a href="https://sparklecomics.square.site">Sparkle Comics</a> is an independent comic book company based in Dayton, Ohio.  We make comics by friends, for fans, and span the genres of action, adventure, fantasy, and horror for pre-teens and up.
 </p><p>
 Blood Scream Comics is our imprint for grownup gorehounds and fans of the more bizarre, radical and experimental comic offerings.
+</p><p>
+Titles
+</p><p>
+<li><a href="SparkleComics4.jpg">Adventure Man</a>
+<li><a href="SparkleComics13.jpg">Black Jack</a>
+<li><a href="SparkleComics14.jpg">Black Lion</a>
+<li><a href="SparkleComics16.jpg">Bone Hill Road</a>
+<li><a href="SparkleComics20.jpg">Book Of Whoa!</a>
+<li><a href="SparkleComics6.jpg">Cool Ghoul</a>
+<li><a href="SparkleComics19.jpg">Curse Of The Beast</a>
+<li><a href="SparkleComics8.jpg">Dr. Creep</a>
+<li><a href="SparkleComics18.jpg">Giant Gila Monster</a>
+<li><a href="SparkleComics17.jpg">Giant Skunk</a>
+<li><a href="SparkleComics21.jpg">Pandemonium</a>
+<li><a href="SparkleComics7.jpg">Samson The China Years</a>
+<li><a href="SparkleComics9.jpg">Shocking Macabre Theatre</a>
+<li><a href="SparkleComics1.jpg">Spring Heeled Jack</a>
+<li><a href="SparkleComics12.jpg">Unknown Creatures</a>
+<li><a href="SparkleComics2.jpg">Wizard's Tales</a>
+<li><a href="SparkleComics15.jpg">Weird Sci-Fi Tales</a>
+
 </p>
 
 </body>
