--- a/index.html
+++ b/index.html
@@ -16520,6 +16520,13 @@
 </tr>
 
 <tr>
+<td>Blood Scream Comics</td>
+<td>2018</td>
+<td>Publisher</td>
+<td><a href="SparkleComics/SparkleComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blood Stain</td>
 <td>2016</td>
 <td>Image</td>
