--- a/TobyComics/TobyComics.html
+++ b/TobyComics/TobyComics.html
@@ -28,6 +28,57 @@
 <div class="mySlides" style="text-align: center;"><img src="TobyComics8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TobyComics9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TobyComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TobyComics61.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -55,50 +106,48 @@ Titles
 <li><a href="TobyComics18.jpg">Bust Out Laffin'</a> 1954
 <li><a href="TobyComics19.jpg">Captain Tootsie</a>  1950
 <li><a href="TobyComics20.jpg">Cartoon Cuties</a>  	1955
-<li><a href="TobyComics21.jpg">Danger Is Our Business!  	1953 	3 issues (3 indexed) 	Gallery 	[December] 1953 - April 1954
-<li><a href="TobyComics22.jpg">Dick Wingate of the United States Navy  	1951 	1 issues (1 indexed) 	Gallery 	1953
-<li><a href="TobyComics23.jpg">Dogpatch Styles Presents Li'l Abner 	1949 	1 issues (0 indexed) 	Gallery 	1949 ?
-Dr. Anthony King, Hollywood Love Doctor  	1952 	4 issues (2 indexed) 	Have 4 (Need 1) 	[January] 1952 - May 1954
-Felix and His Friends  	1953 	2 issues (2 indexed) 	Gallery 	December 1953 - 1954
-Felix the Cat 3-D Comic Book  	1953 	1 issues (1 indexed) 	Gallery 	1953
-Felix the Cat and His Friends  	1954 	1 issues (1 indexed) 	Gallery 	July 1954
-Felix the Cat Summer Annual  	1953 	1 issues (1 indexed) 	Gallery 	Summer 1953
-Felix the Cat Winter Annual  	1954 	1 issues (0 indexed) 	Gallery 	Winter 1954
-Fighting Leathernecks 	1952 	6 issues (6 indexed) 	Gallery 	February 1952 - December 1952
-Gabby Hayes Western 	1953 	1 issues (1 indexed) 	Gallery 	December 1953
-Great Lover Romances  	1951 	20 issues (20 indexed) 	Gallery 	March 1951 - May 1955
-He-Man  	1954 	2 issues (2 indexed) 	Gallery 	May 1954 - July 1954
-John Wayne Adventure Comics  	1949 	31 issues (31 indexed) 	Gallery 	Winter 1949-1950 - May 1955
-John Wayne: The Cowboy Trouble-Shooter!  	1950 	1 issues (0 indexed) 	Gallery 	1950
-Johnny Danger  	1954 	1 issues (1 indexed) 	Gallery 	August 1954
-Jon Juan 	1950 	1 issues (1 indexed) 	Gallery 	Spring 1950
-Judy Joins the Waves  	1951 	1 issues (1 indexed) 	Gallery 	1951
-Kokey Koala  	1952 	1 issues (1 indexed) 	Gallery 	May 1952
-Li'l Abner  	1951 	1 issues (1 indexed) 	Gallery 	1951
-Mammy Yokum and the Great Dogpatch Mystery  	1956 	1 issues (0 indexed) 	Gallery 	1956
-Meet Merton  	1953 	4 issues (4 indexed) 	Gallery 	December 1953 - June 1954
-Monty Hall of the U.S. Marines  	1951 	11 issues (11 indexed) 	Gallery 	August 1951 - April 1953
-Pat Sullivan's Felix the Cat  	1951 	42 issues (42 indexed) 	Gallery 	May 1951 - June 1955
-Pat Sullivan's Felix the Cat Special 	1952 	0 issues (0 indexed) 	No Covers 	1952
-Paul Terry's Terry-Toon Comics  	1950 	1 issues (1 indexed) 	Gallery 	1950
-Pin-Up Pete  	1952 	1 issues (1 indexed) 	Gallery 	1952
-The Purple Claw 	1953 	3 issues (3 indexed) 	Gallery 	January 1953 - May 1953
-Ramar of the Jungle  	1954 	1 issues (1 indexed) 	Gallery 	[circa October-November] 1954
-Return of the Outlaw  	1953 	7 issues (7 indexed) 	Gallery 	February 1953 - 1955
-Sands of the South Pacific  	1953 	1 issues (1 indexed) 	Gallery 	January 1953
-Socko  	1955 	1 issues (0 indexed) 	Add 	[March] 1956
-Sorority Secrets  	1954 	1 issues (1 indexed) 	Gallery 	July 1954
-Super-Brat  	1954 	4 issues (4 indexed) 	Gallery 	January 1954 - July 1954
-T.N.T.  	1954 	10 issues (0 indexed) 	Have 9 (Need 2) 	1954 - 1956
-<li><a href="../TalesOfHorror/TalesOfHorror.html">Tales of Horror</a> 1952
-Tell It to the Marines  	1952 	15 issues (15 indexed) 	Gallery 	March 1952 - July 1955
-True Movie and Television  	1950 	4 issues (4 indexed) 	No Covers 	August 1950 - March 1951
-Two-Bit the Wacky Woodpecker  	1951 	3 issues (3 indexed) 	Gallery 	1951 - May 1953
-Washable Jones and the Shmoos  	1953 	1 issues (1 indexed) 	Gallery 	June 1953
-Wise Cracks  	1955 	12 issues (0 indexed) 	Have 10 (Need 4) 	1955 - August 1956
-With the Marines on the Battlefronts of the World  	1953 	2 issues (2 indexed) 	Gallery 	1953 - March 1954
-Yo' Bets Yo' Life!  	1955 	1 issues (0 indexed) 	Gallery 	1955
-Young Lover Romances  	1952
+<li><a href="TobyComics21.jpg">Danger Is Our Business!</a> 1953
+<li><a href="TobyComics22.jpg">Dick Wingate of the United States Navy</a>  	1951
+<li><a href="TobyComics23.jpg">Dogpatch Styles Presents Li'l Abner</a> 	1949
+<li><a href="TobyComics24.jpg">Dr. Anthony King, Hollywood Love Doctor</a>  	1952
+<li><a href="TobyComics25.jpg">Felix and His Friends</a>  	1953
+<li><a href="TobyComics26.jpg">Felix the Cat 3-D Comic Book</a>  	1953
+<li><a href="TobyComics27.jpg">Felix the Cat and His Friends</a>  	1954
+<li><a href="TobyComics28.jpg">Felix the Cat Summer Annual</a>  	1953
+<li><a href="TobyComics29.jpg">Felix the Cat Winter Annual</a>  	1954
+<li><a href="TobyComics30.jpg">Fighting Leathernecks</a> 	1952
+<li><a href="TobyComics31.jpg">Gabby Hayes Western</a> 	1953
+<li><a href="TobyComics32.jpg">Great Lover Romances</a>  	1951
+<li><a href="TobyComics33.jpg">He-Man</a>  	1954
+<li><a href="TobyComics34.jpg">John Wayne Adventure Comics</a>  	1949
+<li><a href="TobyComics35.jpg">John Wayne: The Cowboy Trouble-Shooter!</a>  	1950
+<li><a href="TobyComics36.jpg">Johnny Danger</a>  	1954
+<li><a href="TobyComics37.jpg">Jon Juan</a> 	1950
+<li><a href="TobyComics38.jpg">Judy Joins the Waves</a>  	1951
+<li><a href="TobyComics39.jpg">Kokey Koala</a>  	1952
+<li><a href="TobyComics40.jpg">Li'l Abner</a>  	1951
+<li><a href="TobyComics41.jpg">Mammy Yokum and the Great Dogpatch Mystery</a>  	1956
+<li><a href="TobyComics42.jpg">Meet Merton</a>  	1953
+<li><a href="TobyComics43.jpg">Monty Hall of the U.S. Marines</a>  	1951
+<li><a href="TobyComics44.jpg">Pat Sullivan's Felix the Cat</a>  	1951
+<li><a href="TobyComics45.jpg">Paul Terry's Terry-Toon Comics</a>  	1950
+<li><a href="TobyComics46.jpg">Pin-Up Pete</a>  	1952
+<li><a href="TobyComics47.jpg">The Purple Claw</a> 	1953
+<li><a href="TobyComics48.jpg">Ramar of the Jungle</a>  	1954
+<li><a href="TobyComics49.jpg">Return of the Outlaw</a>  	1953
+<li><a href="TobyComics50.jpg">Sands of the South Pacific</a> 1953
+<li><a href="TobyComics51.jpg">Sorority Secrets</a>  	1954
+<li><a href="TobyComics52.jpg">Super-Brat</a>  	1954
+<li><a href="TobyComics53.jpg">T.N.T.</a>  	1954
+<li><a href="../TalesOfHorror/TalesOfHorror.html">Tales Of Horror</a> 1952
+<li><a href="TobyComics54.jpg">Tales Of Terror</a> 1952
+<li><a href="TobyComics55.jpg">Tell It to the Marines</a>  	1952
+<li><a href="TobyComics56.jpg">Two-Bit the Wacky Woodpecker</a>  	1951
+<li><a href="TobyComics57.jpg">Washable Jones and the Shmoos</a>  	1953
+<li><a href="TobyComics58.jpg">Wise Cracks</a>  	1955
+<li><a href="TobyComics59.jpg">With the Marines on the Battlefronts of the World</a>  	1953
+<li><a href="TobyComics60.jpg">Yo' Bets Yo' Life!</a>  	1955
+<li><a href="TobyComics61.jpg">Young Lover Romances</a>  	1952
 
 </p>
 
