--- a/AceMagazines/AceMagazines.html
+++ b/AceMagazines/AceMagazines.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Ace Magazines</h1>
+<img src="AceMagazines3.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
