--- a/index.html
+++ b/index.html
@@ -41206,7 +41206,14 @@
 <td>Frank Quitely</td>
 <td>1968</td>
 <td>Creator</td>
-<td><a href="FrankQuitely/FrankQuitely">Details</a></td>
+<td><a href="FrankQuitely/FrankQuitely.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Frank Thorne</td>
+<td>1930</td>
+<td>Creator</td>
+<td><a href="FrankThorne/FrankThorne.html">Details</a></td>
 </tr>
 
 <tr>
