--- a/index.html
+++ b/index.html
@@ -57629,6 +57629,13 @@
 </tr>
 
 <tr>
+<td>Knopf Publishing</td>
+<td>1915</td>
+<td>Publisher</td>
+<td><a href="KnopfPublishing/KnopfPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Known Associates</td>
 <td>1995</td>
 <td>Publisher</td>
@@ -63135,6 +63142,13 @@
 <td>1964</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Magnetic Press</td>
+<td>2014</td>
+<td>Publisher</td>
+<td><a href="MagneticPress/MagneticPress.html">Details</a></td>
 </tr>
 
 <tr>
