--- a/index.html
+++ b/index.html
@@ -71758,6 +71758,13 @@
 </tr>
 
 <tr>
+<td>Nobrow Press</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="NobrowPress/NobrowPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Noche Roja</td>
 <td>2011</td>
 <td>Vertigo</td>
