--- a/index.html
+++ b/index.html
@@ -82329,6 +82329,13 @@
 </tr>
 
 <tr>
+<td>Rosen Publishing</td>
+<td>1950</td>
+<td>Publisher</td>
+<td><a href="RosenPublishing/RosenPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ross Andru</td>
 <td>1927</td>
 <td>Creator</td>
@@ -104269,6 +104276,13 @@
 <td>2015</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>WW Norton</td>
+<td>2009</td>
+<td>Publisher</td>
+<td><a href="WWNorton/WWNorton.html">Details</a></td>
 </tr>
 
 <tr>
